2003-04-28  Bernhard Held <bernhard@bernhardheld.de>

	* lib/src-archive.mk: added directory sdcc to root of archive

2003-04-24  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: removed "SDCCCONFIGUREFLAGS += --program-suffix=$(EXEEXTENSION)"
	after introducing EXEEXT

2003-04-23  Bernhard Held <bernhard@bernhardheld.de>

        * local/usf-cf-x86-linux-1-i586-mingw32msvc.mk: added SDCCINSTALLFLAGS
	for docdir
	* components/sdcc.mk: use SDCCINSTALLFLAGS when installing
	
2003-04-22  Bernhard Held <bernhard@bernhardheld.de>

	* local/usf-cf-x86-linux-1-i586-mingw32msvc.mk: adapted to new configure

2003-04-12  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: SDCC_DIR renamed to SDCC_HOME
	remove share/sdcc for mingw32

2003-04-01  Bernhard Held <bernhard@bernhardheld.de>

	* lib/bootstrap.mk: `mv sdcpp sdcpp.exe` seems to be no longer necessary

2003-03-31  Bernhard Held <bernhard@bernhardheld.de>

	* usf-cf-alpha-linux-1.mk, usf-cf-sparc-linux-1.mk,
	usf-cf-x86-linux-1-i586-mingw32msvc.mk,
	usf-cf-x86-linux-1.mk: added 'MAKEJOBFLAGS = "-j 2"' to exploit the
	dual processors

2003-03-27  Bernhard Held <bernhard@bernhardheld.de>

	* support/error-filter.sh: suppress cvs lock messages
	* components/sdcc.mk: --target not required for configure (even if
	cross-compiling)

2003-03-18  Bernhard Held <bernhard@bernhardheld.de>

	* support/readme-snapshot.txt: fix links and added a link to online documentation
	* support/error-filter.sh: yacc's warning is no longer filtered

2003-03-11  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: add first 100 lines of sdcc's ChangeLog to snapshot

2003-03-10  Bernhard Held <bernhard@bernhardheld.de>

	* lib/bootstrap.mk: first upload, then remove-old-versions, not vice versa

2003-03-03  Bernhard Held <bernhard@bernhardheld.de>

	* lib/bootstrap.mk: put logs in $(STAGINGBASE), so that they survive sdcc-build-bootstrap.sh